<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content" tools:ignore="MissingConstraints" android:id="@+id/appBarLayout">
    <com.google.android.material.appbar.MaterialToolbar
        android:background="@color/primaryColor"
        android:layout_width="match_parent"
        app:title="@string/app_name"
        app:titleTextColor="@color/primaryTextColor"
        app:navigationIcon="@drawable/ic_location_arrow"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_height="?attr/actionBarSize">
    </com.google.android.material.appbar.MaterialToolbar>
  </com.google.android.material.appbar.AppBarLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center_horizontal"
      android:layout_gravity="center_vertical"
      android:layout_marginTop="50sp"
      app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/textField"-->
<!--        android:layout_width="240sp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/uri_input"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->
<!--      <com.google.android.material.textfield.TextInputEditText-->
<!--          android:layout_width="match_parent"-->
<!--          android:layout_height="wrap_content"-->
<!--          android:id="@+id/uriInput"-->
<!--          android:text="@string/ws_server"-->
<!--      />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->
    <!--    <EditText-->
    <!--        android:layout_width="240sp"-->
    <!--        android:layout_height="50sp"-->
    <!--        android:hint="@string/uri_input"-->
    <!--        android:inputType="textUri"-->
    <!--        android:text="@string/ws_server"-->
    <!--        android:autofillHints="ws://118.195.244.224:8088"/>-->

    <!--    <CheckBox-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/check_text"-->
    <!--        android:checked="true"-->
    <!--        android:id="@+id/checkBox"/>-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:orientation="horizontal">
      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/btn"
          android:layout_margin="5sp"
          android:text="@string/btn_con_text"
          app:icon="@drawable/ic_link"
          style="@style/Widget.MaterialComponents.Button.Icon"/>
      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/submitBtn"
          android:enabled="false"
          android:layout_margin="5sp"
          app:icon="@drawable/ic_location_dot"
          android:text="@string/submit_text"
          style="@style/Widget.MaterialComponents.Button.Icon"/>
      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/bindServ"
          android:enabled="false"
          android:layout_margin="5sp"
          android:text="@string/bind_text"
          style="@style/Widget.MaterialComponents.Button.Icon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:layout_marginStart="40sp">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/lat_text_default"
          android:id="@+id/latText"
          android:gravity="center"
          android:textSize="18sp"
      />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/lng_text_default"
          android:id="@+id/lngText"
          android:gravity="center"
          android:textSize="18sp"
      />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/spd_text_default"
          android:id="@+id/spdText"
          android:gravity="center"
          android:textSize="18sp"
      />
    </LinearLayout>
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/gps_data"-->
<!--        android:id="@+id/text"-->
<!--        android:gravity="center"-->
<!--        android:textSize="16sp"-->
<!--    />-->

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20sp"
    >
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"
          android:layout_margin="10sp"
      android:layout_gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head_line"
            android:textSize="28sp"
            android:gravity="center"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggest_tip"
            android:textSize="24sp"
            android:id="@+id/tip"
            android:gravity="center"
        />
      </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


  </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>